--- a/_includes/header.html
+++ b/_includes/header.html
@@ -43,11 +43,12 @@
 		<div class="container">
 
 			<div class="row">
-				<div class="col-lg-12">
+				<div class="col-lg-5">
 					<div class="intro-message">
 						<h1>{{ page.title }}</h1>
 						<h3>{{ page.subTitle }}</h3>
-						<hr class="intro-divider">
+                        
+                        <hr class="intro-divider">
 						<ul class="list-inline intro-social-buttons">
 							{% for social in site.social %}
 							<li>
@@ -58,6 +59,7 @@
                                 <a href="#download" class="btn btn-default btn-lg"><i class="fa fa-download fa-fw"></i> Download</a>
                             </li>
 						</ul>
+                        <h2 class="byline">Data Protection &amp; Privacy<br>is a right, not a privilege</h2>
 					</div>
 				</div>
 			</div>
