--- a/_includes/docs.html
+++ b/_includes/docs.html
@@ -7,7 +7,11 @@
                 <div class="col-lg-12">
                     <h2>Documentation</h2>
 
-                    <p class=""><a target="_blank" href="{{site.baseurl}}apidocs/index.html" class="btn btn-default btn-lg">API docs</a></p>
+                    <div class="alert alert-warning">Warning: There is no automated database upgrade step yet, so use this only in testing for now.</div>
+
+                    <p>For installation instructions, see the <a href="https://github.com/javadogs/cws">Readme file provided along the cws sources on github.</a></p>
+
+                    <p>For developers, there is a full <a target="_blank" href="{{site.baseurl}}apidocs/index.html" >documentation of the API</a> available.</p>
 
                     <br><br>
                     <h3>Who is this for</h3>
