--- a/_includes/download.html
+++ b/_includes/download.html
@@ -7,7 +7,7 @@
               <br/>
                 <p>The first release candidate of CWS is ready. It is tested under WildFly 11 using PostgreSQL. The current version is dubbed 0.8, as it reflects the completed milestones in <a href="https://github.com/JavaDogs/cws">GitHub</a>.<p>
 
-                <p>We encourage you to test it, any feedback will be welcome, as it will only help improve CWS in preparation of the release of the final 1.0 version.</p>
+                <div class="alert alert-note">We encourage you to test it, any feedback will be welcome, as it will only help improve CWS in preparation of the release of the final 1.0 version.</div>
 
                 <p><a href="https://github.com/JavaDogs/cws/blob/master/README.md">Release Notes</a> | <a href="https://github.com/JavaDogs/cws/blob/master/LICENSE">Apache 2.0 License</a> </p> 
 
