--- a/_includes/download.html
+++ b/_includes/download.html
@@ -5,14 +5,15 @@
               <br/><br/>
               <h2>Download CWS 0.8</h2>
               <br/>
-                <p>The first release candidate of CWS is ready. It is tested under WildFly 11 using PostgreSQL. The current version is dubbed 0.8, as it reflects the completed milestones in <a href="https://github.com/JavaDogs/cws">GitHub</a>.<p>
+                <p>The first release candidate of CWS is ready.</p>
+                <p>It is tested under <strong>WildFly 11</strong> using <strong>PostgreSQL</strong>. The current version is dubbed 0.8, as it reflects the completed milestones in <a href="https://github.com/JavaDogs/cws">GitHub</a>.<p>
 
-                <div class="alert alert-note">We encourage you to test it, any feedback will be welcome, as it will only help improve CWS in preparation of the release of the final 1.0 version.</div>
+                <div class="alert alert-info">We <strong>encourage you to test it</strong>, any feedback will be highly welcome, in preparation of the release of the final 1.0 version!</div>
 
                 <p><a href="https://github.com/JavaDogs/cws/blob/master/README.md">Release Notes</a> | <a href="https://github.com/JavaDogs/cws/blob/master/LICENSE">Apache 2.0 License</a> </p> 
 
                 <p>
-                  <a href="https://javadog.io/downloads/cws-0.8.1.tgz" class="btn btn-default btn-lg"><i class="fa fa-download fa-fw"></i> Download CWS</a>
+                  <a href="https://javadog.io/downloads/cws-0.8.1.tgz" class="btn btn-default btn-lg"><i class="fa fa-download fa-fw"></i> Download CWS 0.8.1</a>
                 </p>
                 <br/>
               </div>
