--- a/_includes/download.html
+++ b/_includes/download.html
@@ -3,17 +3,19 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
               <br/><br/>
-              <h2>Download CWS 0.9</h2>
+              <h2>Download CWS 0.9.9</h2>
               <br/>
                 <p>The second release candidate of CWS is ready.</p>
-                <p>It is tested under <strong>WildFly 11</strong> using <strong>PostgreSQL</strong>. The current version is dubbed 0.9, as it reflects the completed milestones in <a href="https://github.com/JavaDogs/cws">GitHub</a>.<p>
+
+                <p>It is tested under <strong>WildFly 11</strong> using
+                    <strong>PostgreSQL</strong>. The current version is dubbed 0.9.9, and is the final release candidate. It only awaits that <a href="https://circleci.com/gh/JavaDogs/cws">Circle-CI</a> &amp; <a href="https://travis-ci.org/JavaDogs/cws">Travis-CI</a> update their build images to Java 1.8.0_161 or later.<p>
 
                 <div class="alert alert-info">We <strong>encourage you to test it</strong>, any feedback will be highly welcome, in preparation of the release of the final 1.0 version!</div>
 
-                <p><a href="https://github.com/JavaDogs/cws/blob/master/README.md">Release Notes</a> | <a href="https://github.com/JavaDogs/cws/blob/master/LICENSE">Apache 2.0 License</a> </p> 
+                <p><a href="https://github.com/JavaDogs/cws/blob/master/README.md">Release Notes</a> | <a href="https://github.com/JavaDogs/cws/blob/master/LICENSE">Apache 2.0 License</a> </p>
 
                 <p>
-                  <a href="https://javadog.io/downloads/cws-0.9.0.tgz" class="btn btn-default btn-lg"><i class="fa fa-download fa-fw"></i> Download CWS 0.9.0</a>
+                  <a href="https://javadog.io/downloads/cws-0.9.9.tgz" class="btn btn-default btn-lg"><i class="fa fa-download fa-fw"></i> Download CWS 0.9.9</a>
                 </p>
                 <br/>
               </div>
