Added Security information, to report errors in case a discovery has been made.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -27,6 +27,10 @@
                     <li>
                         <a href="#contact">Contact</a>
                     </li>
+                    <li class="footer-menu-divider">&sdot;</li>
+                    <li>
+                        <a href="#security">Security</a>
+                    </li>
                 </ul>
                 <p class="copyright text-muted small">{{ site.copyright }}</p>
             </div>
