--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,31 +3,36 @@
     <div class="container">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header page-scroll">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+            <button type="button" class="navbar-toggle" data-toggle="collapse"
+                    data-target="#bs-example-navbar-collapse-1">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand page-scroll" href="#home">{{ site.title }}</a>
+            <a class="navbar-brand page-scroll" href="#home">{{ site.title
+                }}</a>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav navbar-right">  
-            	<li>
+            <ul class="nav navbar-nav navbar-right">
+                <li>
                     <a class="page-scroll" href="#about">About</a>
-                </li>            
+                </li>
                 <li>
                     <a class="page-scroll" href="#features">Features</a>
                 </li>
                 <li>
                     <a class="page-scroll" href="#docs">Documentation</a>
-                </li>            
+                </li>
                 <li>
                     <a class="page-scroll" href="#download">Download</a>
-                </li>            
+                </li>
                 <li>
                     <a class="page-scroll" href="#contact">Contact</a>
+                </li>
+                <li>
+                    <a class="page-scroll" href="#security">Security</a>
                 </li>
             </ul>
         </div>
@@ -37,36 +42,43 @@
 </nav>
 
 <section id="home">
-<!-- Header -->
-	<div class="intro-header">
+    <!-- Header -->
+    <div class="intro-header">
 
-		<div class="container">
+        <div class="container">
 
-			<div class="row">
-				<div class="col-lg-5">
-					<div class="intro-message">
-						<h1>{{ page.title }}</h1>
-						<h3>{{ page.subTitle }}</h3>
-                        
+            <div class="row">
+                <div class="col-lg-5">
+                    <div class="intro-message">
+                        <h1>{{ page.title }}</h1>
+                        <h3>{{ page.subTitle }}</h3>
+
                         <hr class="intro-divider">
-						<ul class="list-inline intro-social-buttons">
-							{% for social in site.social %}
-							<li>
-								<a href="{{ social.url }}" class="btn btn-default btn-lg"><i class="fa fa-{{ social.title }} fa-fw"></i> <span class="network-name">{{ social.title }}</span></a>
-							</li>
-							{% endfor %}
+                        <ul class="list-inline intro-social-buttons">
+                            {% for social in site.social %}
                             <li>
-                                <a href="#download" class="btn btn-default btn-lg"><i class="fa fa-download fa-fw"></i> Download</a>
+                                <a href="{{ social.url }}"
+                                   class="btn btn-default btn-lg"><i
+                                        class="fa fa-{{ social.title }} fa-fw"></i>
+                                    <span class="network-name">{{ social.title }}</span></a>
                             </li>
-						</ul>
-                        <h2 class="byline">Data Protection &amp; Privacy<br>is a right, not a privilege</h2>
-					</div>
-				</div>
-			</div>
+                            {% endfor %}
+                            <li>
+                                <a href="#download"
+                                   class="btn btn-default btn-lg"><i
+                                        class="fa fa-download fa-fw"></i>
+                                    Download</a>
+                            </li>
+                        </ul>
+                        <h2 class="byline">Data Protection &amp; Privacy<br>is a
+                            right, not a privilege</h2>
+                    </div>
+                </div>
+            </div>
 
-		</div>
-		<!-- /.container -->
+        </div>
+        <!-- /.container -->
 
-	</div>
-	<!-- /.intro-header -->
+    </div>
+    <!-- /.intro-header -->
 </section>
