Added Security information, to report errors in case a discovery has been made.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,7 @@
 		{% include docs.html %}
 		{% include download.html %}
 		{% include contact.html %}
+		{% include security.html %}
 		{% include footer.html %}
 		{% include js.html %}
 	</body>
