Moving Security up one place.

--- a/_includes/docs.html
+++ b/_includes/docs.html
@@ -1,4 +1,4 @@
-<!-- About Section -->
+<!-- Documentation Section -->
 <section id="docs" class="">
     <div class="content-section-a">
         <div class="container">
@@ -96,7 +96,7 @@
                             the latest Java 8, which include unlimited strength
                             encryption, the default settings will be upgraded to
                             reflect this. Besides these, there will be no other
-                            changes between 0.9.9 and 1.0.0.</i>
+                            significant changes between 0.9.9 and 1.0.0.</i>
                         </li>
                     </ul>
                 </div>
