update text and styles at Danskskolen med alex

--- a/_includes/docs.html
+++ b/_includes/docs.html
@@ -1,6 +1,6 @@
 <!-- Documentation Section -->
-<section id="docs" class="">
-    <div class="content-section-a">
+<section id="docs" class="module content-section-a">
+    <div class="">
         <div class="container">
 
             <div class="row">
