--- a/_includes/about.html
+++ b/_includes/about.html
@@ -5,7 +5,7 @@
               <br/><br/>
               <h2>About CWS</h2>
               <br/>
-                <p>CWS gives you an <strong>easy</strong> way to store <strong>any data safely encrypted</strong>.</p>
+                <p>CWS - Cryptographic Web Store - gives you an <strong>easy</strong> way to store <strong>any data safely encrypted</strong>.</p>
                 <p>Data is <strong>never persisted unencrypted</strong> and only <strong>minimal necessary metadata</strong> is stored. </p>
                 <p>Support for <strong>circles of trust</strong> allows to share encrypted data amongst a group of people.</p>
                 <p>We have close to <strong>100% test coverage</strong>.</p>
