--- a/_includes/security.html
+++ b/_includes/security.html
@@ -1,5 +1,5 @@
 <!-- Security Section -->
-<section id="security" class="">
+<section id="security" class="module">
     <div class="content-section-a">
         <div class="container">
             <div class="row">
