--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -22,14 +22,17 @@ h6 {
     font-weight: 700;
 }
 
-#docs {
+.module {
     font-size: 18px;
     font-weight: 400;
-    padding: 50px 0;
 }
 .lead {
     font-size: 18px;
     font-weight: 400;
+}
+
+#docs {
+    padding: 50px 0;
 }
 
 .intro-header {
