--- a/_includes/header.html
+++ b/_includes/header.html
@@ -44,34 +44,16 @@
 <section id="home">
     <!-- Header -->
     <div class="intro-header">
-
+        <div class="img"></div>
         <div class="container">
-
             <div class="row">
-                <div class="col-lg-5">
+                <div class="col-lg-12">
                     <div class="intro-message">
                         <h1>{{ page.title }}</h1>
-                        <h3>{{ page.subTitle }}</h3>
+                        <h2>{{ page.subTitle }}</h2>
 
-                        <hr class="intro-divider">
-                        <ul class="list-inline intro-social-buttons">
-                            {% for social in site.social %}
-                            <li>
-                                <a href="{{ social.url }}"
-                                   class="btn btn-default btn-lg"><i
-                                        class="fa fa-{{ social.title }} fa-fw"></i>
-                                    <span class="network-name">{{ social.title }}</span></a>
-                            </li>
-                            {% endfor %}
-                            <li>
-                                <a href="#download"
-                                   class="btn btn-default btn-lg"><i
-                                        class="fa fa-download fa-fw"></i>
-                                    Download</a>
-                            </li>
-                        </ul>
-                        <h2 class="byline">Data Protection &amp; Privacy<br>is a
-                            right, not a privilege</h2>
+                        <h3 class="byline">Data Protection &amp; Privacy is a
+                            right, not a privilege</h3>
                     </div>
                 </div>
             </div>
