Various minor corrections.

--- a/_includes/docs.html
+++ b/_includes/docs.html
@@ -7,8 +7,6 @@
                 <div class="col-lg-12">
                     <h2>Documentation</h2>
 
-                    <div class="alert alert-warning">Warning: There is no automated database upgrade step yet, so use this only in testing for now.</div>
-
                     <p>For installation instructions, see the <a href="https://github.com/javadogs/cws">Readme file provided along the cws sources on github.</a></p>
 
                     <p>For developers, there is a full <a target="_blank" href="{{site.baseurl}}apidocs/index.html" >documentation of the API</a> available.</p>
@@ -84,7 +82,7 @@
                     still give you an additional security layer as your stored
                     data is encrypted so even if someone compromises your
                     system, the data and keys should still be secure, as it is
-                    stored encrypted - hence the name <i>Crypto Store</i>.</p>
+                    stored encrypted - hence the name <i>Cryptographic Web Store</i>.</p>
                 </div>
             </div>
         </div>
