--- a/_includes/download.html
+++ b/_includes/download.html
@@ -7,8 +7,8 @@
             <br/>
             <p>The first release of CWS is ready.</p>
 
-            <p>It is tested under <strong>WildFly 11</strong> using
-            <strong>PostgreSQL</strong>.</p>
+            <p>It is tested under <strong>WildFly 11, 12 &amp; 13</strong> using
+            <strong>PostgreSQL</strong> as database.</p>
 
             <p><a href="https://github.com/JavaDogs/cws/blob/master/README.md">Release Notes</a>
             | <a href="https://github.com/JavaDogs/cws/blob/master/LICENSE">Apache 2.0 License</a></p>
