--- a/_includes/about.html
+++ b/_includes/about.html
@@ -33,7 +33,7 @@
                   <a href="https://travis-ci.org/JavaDogs/cws" rel="nofollow"><img src="https://api.travis-ci.org/JavaDogs/cws.svg" alt="TravisCI" style="max-width:100%;"></a>
                   <a href="https://circleci.com/gh/JavaDogs/cws" rel="nofollow"><img src="https://circleci.com/gh/JavaDogs/cws.png?style=shield" alt="CircleCI" style="max-width:100%;"></a>
                   <a href="https://scan.coverity.com/projects/javadogs-cws" rel="nofollow"><img src="https://scan.coverity.com/projects/13955/badge.svg" alt="Coverity" style="max-width:100%;"></a>
-                  <a href="https://sonarcloud.io/dashboard?id=io.javadog:cws" rel="nofollow"><img src="https://sonarcloud.io/api/badges/gate?key=io.javadog:cws" alt="SonarQube" style="max-width:100%;"></a>
+                  <a href="https://sonarcloud.io/dashboard?id=io.javadog:cws" rel="nofollow"><img src="https://sonarcloud.io/api/project_badges/measure?project=io.javadog:cws&metric=alert_status" alt="SonarCloud" style="max-width:100%;"></a>
                   <a href="https://www.codacy.com/app/cws/cws" rel="nofollow"><img src="https://api.codacy.com/project/badge/Grade/78366d7059554164a3f65ceabe986598" alt="Codacy" style="max-width:100%;"></a>
                   <a href="http://www.apache.org/licenses/LICENSE-2.0" rel="nofollow"><img src="https://img.shields.io/badge/license-Apache+License+2.0-blue.svg" alt="Software License" style="max-width:100%;"></a>
                 </h2>
