Fixed a few more embarrassing typo.

--- a/_includes/docs.html
+++ b/_includes/docs.html
@@ -44,7 +44,7 @@
                         <i>If the Provider is not taking their customers data
                         security seriously, either by not patching their
                         software or protecting their services using firewalls.
-                        Then, CWS cannot give you a guarentee that your data is
+                        Then, CWS cannot give you a guarantee that your data is
                         secure. As CWS requires that the underlying software to
                         run Java &amp; Java EE must be properly updated.</i>
                         </li>
@@ -56,7 +56,7 @@
                         has been compromised, all parts may be compromised by
                         insecure communications. SSL should therefore be applied
                         in all layers, and the setup should be made as secure as
-                        possible by limitting or removing protocols and increase
+                        possible by limiting or removing protocols and increase
                         key strength. See <a href="https://www.ssllabs.com/ssltest/">SSL Labs</a>
                         for testing and hints - to start, you can use <a href="https://letsencrypt.org/">Let's Encrypt</a>
                         to get free SSL Certificates.</i>
