--- a/_includes/security.html
+++ b/_includes/security.html
@@ -8,8 +8,8 @@
                     <br/>
 
                     <p>Security is one of the most important aspects of CWS, and
-                    although extensive effors has been made to remove all
-                    problems, secrity issues may still sneak in. If you have
+                    although extensive efforts has been made to remove all
+                    problems, security issues may still sneak in. If you have
                     discovered a security issue, please send an e-mail to the
                     the core developers. JavaDog.io uses ProtonMail for all
                     e-mail communication, and their support for PGP is limited,
