Added Java 8 & 10 as test runtime environments.

--- a/_includes/download.html
+++ b/_includes/download.html
@@ -8,6 +8,7 @@
             <p>The first release of CWS is ready.</p>
 
             <p>It is tested under <strong>WildFly 11, 12 &amp; 13</strong> using
+            both <strong>Java 8 &amp; 10</strong> as Runtime Environments, and
             <strong>PostgreSQL</strong> as database.</p>
 
             <p><a href="https://github.com/JavaDogs/cws/blob/master/README.md">Release Notes</a>
