--- a/_includes/download.html
+++ b/_includes/download.html
@@ -7,9 +7,12 @@
             <br/>
             <p>The first release of CWS is ready.</p>
 
-            <p>It is tested under <strong>WildFly 11, 12 &amp; 13</strong> using
-            both <strong>Java 8 &amp; 10</strong> as Runtime Environments, and
-            <strong>PostgreSQL</strong> as database.</p>
+            <p>Tests has been performed using:</p>
+            <ul>
+                <li><strong>WildFly 11, 12 &amp; 13</strong></li>
+                <li><strong>Java Runtime Envitonment 8 &amp; 10</strong></li>
+                <li>PostgreSQL as RDBMS</li>
+            </ul>
 
             <p><a href="https://github.com/JavaDogs/cws/blob/master/README.md">Release Notes</a>
             | <a href="https://github.com/JavaDogs/cws/blob/master/LICENSE">Apache 2.0 License</a></p>
