--- a/_includes/download.html
+++ b/_includes/download.html
@@ -7,7 +7,9 @@
             <br/>
             <p>The first release of CWS is ready.</p>
 
-            <p>Tests has been performed using <strong>WildFly 11, 12 &amp; 13</strong>,<br><strong>Java Runtime Envitonment 8 &amp; 10</strong><br>&amp; PostgreSQL as RDBMS</p>
+            <p>Tests has been performed using <strong>WildFly 11, 12 &amp; 13</strong>,<br>
+            with <strong>Java 6 &amp; 10</strong> as Runtime Environments,<br>
+            and <strong>PostgreSQL</strong> as RDBMS</p>
 
             <p><a href="https://github.com/JavaDogs/cws/blob/master/README.md">Release Notes</a>
             | <a href="https://github.com/JavaDogs/cws/blob/master/LICENSE">Apache 2.0 License</a></p>
