Updated website with 1.0.1 information.

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -8,7 +8,7 @@
 
               <br/>
                 <p>CWS - Cryptographic Web Store - gives you an <strong>easy</strong> way to store <strong>any data safely encrypted</strong>.</p>
-                <p>Data is <strong>never persisted unencrypted</strong> and only <strong>minimal necessary metadata</strong> is stored. </p>
+                <p>Data is <strong>always stored encrypted</strong> with <strong>as little metadata as possible</strong>.</p>
                 <p>Support for &quot;<strong>Circles of Trust</strong>&quot; allows sharing encrypted data within a select group.</p>
               <br/>
 
