--- a/_includes/download.html
+++ b/_includes/download.html
@@ -3,9 +3,9 @@
     <div class="row">
         <div class="col-lg-8 col-lg-offset-2">
             <br/><br/>
-            <h2>Download CWS 1.1.0</h2>
+            <h2>Download CWS 1.1.1</h2>
             <br/>
-            <p>The second version of CWS is finalized.</p>
+            <p>The bugfix update to the second version of CWS.</p>
 
             <p>Tests has been performed using <strong>WildFly 16 &amp; 17</strong>,<br>
             with <strong>Java 8 &amp; 11</strong> as Runtime Environments,<br>
@@ -14,7 +14,7 @@
             <p><a href="https://github.com/JavaDogs/cws/blob/master/README.md">Release Notes</a>
             | <a href="https://github.com/JavaDogs/cws/blob/master/LICENSE">Apache 2.0 License</a></p>
 
-            <p><a href="https://javadog.io/downloads/cws-1.1.0.tgz" class="btn btn-default btn-lg"><i class="fa fa-download fa-fw"></i> Download CWS 1.1.0</a></p>
+            <p><a href="https://javadog.io/downloads/cws-1.1.1.tgz" class="btn btn-default btn-lg"><i class="fa fa-download fa-fw"></i> Download CWS 1.1.1</a></p>
             <br/>
         </div>
     </div>
