Corrected test versions of WildFly.

--- a/_includes/download.html
+++ b/_includes/download.html
@@ -5,10 +5,10 @@
             <br/><br/>
             <h2>Download CWS 1.1.1</h2>
             <br/>
-            <p>The bugfix update to the second version of CWS.</p>
+            <p>Latest stable version of CWS.</p>
 
-            <p>Tests has been performed using <strong>WildFly 16 &amp; 17</strong>,<br>
-            with <strong>Java 8 &amp; 11</strong> as Runtime Environments,<br>
+            <p>Tests has been performed using <strong>WildFly 17 &amp; 18</strong>,<br>
+            with <strong>Java 8, 11 &amp; 13</strong> as Runtime Environments,<br>
             and <strong>PostgreSQL</strong> as RDBMS</p>
 
             <p><a href="https://github.com/JavaDogs/cws/blob/master/README.md">Release Notes</a>
